testsuite/tests/typecheck/should_fail/CustomTypeErrors02.stderr

CustomTypeErrors02.hs:17:1: error: [GHC-47403]
    • The type 'a0 -> a0' cannot be represented as an integer.
    • When checking the inferred type
        err :: (TypeError ...)
